<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@color/colorAccent"
        app:civ_border_width="2dp"
        app:civ_border_color="#328078"/>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/comic_title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/follower_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/txt_name"
        android:layout_toRightOf="@id/txt_name"
        android:ellipsize="end"
        android:textSize="12sp"
        android:text="@string/followers"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/txt_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_below="@id/txt_description"
        android:layout_toRightOf="@id/img_photo"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:text="@string/company"
        android:textStyle="bold"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>